kubernetes/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
spec:
  hosts:
    - "api.pepago.my.id"
  gateways:
    - pepagomyid-gateway
  http:
  - name: default
    match:
    - uri:
        regex: /
    rewrite:
      uri: /
    route:
    - destination:
        host: reverse-proxy.proxy.svc.cluster.local #nama service cluster IP
        port:
          number: 80
  - name: api
    match:
    - uri:
        regex: /api/v1/?(.*)
    route:
    - destination:
        host: reverse-proxy.proxy.svc.cluster.local #nama service cluster IP
        port:
          number: 80
